# fli-watch

./: .dockerignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE.txt  Makefile  README.md  docker-compose.yml  email_config.json  mkdocs.yml  monitor.py  nixpacks.toml  pyproject.toml  pytest.ini  railway.toml  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: docker.yml  docs.yml  lint.yml  prezzi_v2.yml  price_watch.yml  publish.yml  test.yml
data/: airlines.csv  airports.csv
docs/: index.md
docs/api/: models.md  search.md
docs/examples/: advanced.md
docs/guides/: mcp.md  quickstart.md
examples/: README.md  advanced_date_search_validation.py  basic_one_way_search.py  complex_flight_search.py  complex_round_trip_validation.py  date_range_search.py  date_search_with_preferences.py  error_handling_with_retries.py  price_tracking.py  result_processing.py  round_trip_search.py  time_restrictions_search.py
fli/cli/: __init__.py  console.py  enums.py  errors.py  main.py  utils.py
fli/cli/commands/: __init__.py  airports.py  dates.py  flights.py  multi.py
fli/core/: __init__.py  airports.py  builders.py  currency.py  parsers.py
fli/mcp/: __init__.py  _entry.py  email_config.json  price_watch.py  server.py
fli/models/: __init__.py  airline.py  airport.py
fli/models/google_flights/: __init__.py  base.py  dates.py  flights.py
fli/search/: __init__.py  _booking_capture.py  _concurrency.py  _decoders.py  _helpers.py  _proto.py  _urls.py  _wire.py  client.py  dates.py  exceptions.py  flights.py
scripts/: capture_fixtures.py  generate_enums.py  update_airports.py
scripts/benchmarks/: __init__.py  _fixtures.py  _harness.py  _mocks.py  bench.py  compare.py
skills/fli/: SKILL.md
tests/: conftest.py
tests/cli/: conftest.py  test_airports.py  test_dates.py  test_errors.py  test_flights.py  test_flights_new_filters.py  test_multi.py  test_utils.py
tests/core/: test_airports.py  test_builders.py  test_currency.py  test_currency_parser.py  test_parsers.py
tests/mcp/: __init__.py  test_find_airports.py  test_mcp_http.py  test_mcp_server.py  test_mcp_server_fixes.py  test_mcp_server_unit.py  test_multi_airport.py  test_new_filters.py
tests/models/: test_alliance_and_exclude_filters.py  test_date_search_filters.py  test_date_search_filters_validation.py  test_flight_search_filters.py  test_flight_segment_validation.py  test_rich_flight_models.py  test_time_restrictions.py
tests/search/: test_booking_capture.py  test_booking_options.py  test_booking_options_live_fixture.py  test_client.py  test_concurrency.py  test_decoders.py  test_expand_multi_leg.py  test_helpers.py  test_locale_params.py  test_parallel_search.py  test_parse_flights_data.py  test_proto.py  test_search_dates.py  test_search_flights.py  test_search_flights_fuzz.py  test_search_flights_new_filters_live.py  test_snapshot_fixtures.py  test_wire.py
